localization for error in table z-index style fix

--- a/src/app/components/success/success.component.scss
+++ b/src/app/components/success/success.component.scss
@@ -5,6 +5,7 @@
   overflow: hidden;
   position: fixed;
   top: 0px;
+  z-index: 101;
   .success {
     display: block;
     margin: auto;
@@ -16,6 +17,7 @@
     background-color: #c5c5c5;
     border-radius: 5px;
     box-shadow: 0px 0px 10px #000;
+    z-index: 101;
     h2 {
       color: green;
     }
